--- a/templates/admin_footer.html
+++ b/templates/admin_footer.html
@@ -1,9 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-</body>
-</html>
+<div class="container-fluid p-5
+ text-white mt-5" style="background-color:transparent">
+    <div class="row justify-content-center pb-5">
+
+        <div class="third col-md-3">
+            <ul class="list-unstyled ">
+                <li><i class="fab fa-facebook-square fa-2x"></i></li>
+                <li><i class="fab fa-instagram fa-2x"></i></li>
+                <li><i class="fab fa-twitter fa-2x"></i></li>
+            </ul>
+        </div>
+    </div>
+</div>
