--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,16 +1,16 @@
 {% load static%}
 <!-- Footer -->
-<footer class="page-footer font-small mdb-color bg-secondary pt-4 home">
-  <!-- Footer Links -->
-  <div class="container text-center text-md-left">
-    <!-- Grid row -->
-    <div class="row">
-      <!-- Grid column -->
-      <div class="col-md-4 col-lg-3 mr-auto my-md-4 my-0 mt-4 mb-1">
-        <!-- Content -->
-        <h5 class="font-weight-bold text-uppercase mb-4">About Us</h5>
-        <p>Here we Provide the best services alongwith the varities of adventerous activities.</p>
-        <p>For more information  call us on given address</p>
+<footer class="page-footer font-small mdb-color bg-dark pt-4 home" style="color:yellow">
+    <!-- Footer Links -->
+    <div class="container text-center text-md-left">
+        <!-- Grid row -->
+        <div class="row">
+            <!-- Grid column -->
+            <div class="col-md-4 col-lg-3 mr-auto my-md-4 my-0 mt-4 mb-1">
+                <!-- Content -->
+                <h5 class="font-weight-bold text-uppercase mb-4">About Us</h5>
+                <p>Here we Provide the best services alongwith the varities of adventerous activities.</p>
+                <p>For more information call us on given address</p>
       </div>
       <!-- Grid column -->
       <hr class="clearfix w-100 d-md-none">
