--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -4,29 +4,29 @@
 <title>Add User</title>
 {% endblock%}
 {% block main_content %}
-<div class= " pb-5" style=" background-image:url(/static/images/slider1.jpg)">
+<div class=" pb-5" style=" background-image:url(/static/images/register.jpg); background-repeat:no-repeat">
 
-<div class="container mb-5">
-    <div class="row">
-        <div class="col-md-6 offset-md-3">
-            <h1 class="text-center">Add New User</h1>
-           {% include 'messages.html' %}
-            <div class="card py-2 px-2">
-                <form class="form" action="" method="POST">
-                    {% csrf_token %}
-                    {{ register_form | bootstrap_horizontal }}
-                    <button type="submit" class="btn btn-primary mt-3">Submit</button>
-                </form>
-            </div>
+    <div class="container mb-5">
+        <div class="row">
+            <div class="col-md-6 offset-md-3">
+                <h1 class="text-center">Add New User</h1>
+                {% include 'messages.html' %}
+                <div class="card py-2 px-2" style="background:transparent; color:white">
+                    <form class="form" action="" method="POST">
+                        {% csrf_token %}
+                        {{ register_form | bootstrap_horizontal }}
+                        <button type="submit" class="btn btn-info mt-3" style="margin-left:450px">Submit</button>
+                    </form>
+                </div>
         </div>
     </div>
 </div>
 </div>
 <script>
     var form_fields = document.getElementsByTagName('input')
-    form_fields[2].placeholder = "Enter Username"
-    form_fields[3].placeholder = "Enter Password"
-    form_fields[4].placeholder = "Confirm Password"
+    form_fields[1].placeholder = "Enter Username"
+    form_fields[2].placeholder = "Enter Password"
+    form_fields[3].placeholder = "Confirm Password"
     for (field in form_fields){
     form_fields[field].className += ' my-3'
     }
