--- a/templates/admin_layout.html
+++ b/templates/admin_layout.html
@@ -11,11 +11,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 </head>
 <body>
-<div class="container_fluid">
-    {% include 'admin_header.html'%}
-    {% block main_content %}
-    {% endblock main_content%}
-    {% include 'admin_footer.html' %}
+<div class=" image pb-5" style=" background-image:url(/static/images/adminbg.jpg)">
+    <div class="container_fluid">
+        {% include 'admin_header.html'%}
+        {% block main_content %}
+        {% endblock main_content%}
+        {% include 'admin_footer.html' %}
+    </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
