--- a/resort/templates/resort/home.html
+++ b/resort/templates/resort/home.html
@@ -42,8 +42,8 @@
         {% else %}
         <div class="card col-md-3 m-2 mt-5" style=" background-color:#D8F6CE">
             <img src="/{{i.activity_type_img}}" class="card-img-top" alt="...">
-            <div class="card-body"  >
-                <h5 class="card-title" >{{i.activity_type_name}}</h5>
+            <div class="card-body">
+                <h5 class="card-title">{{i.activity_type_name}}</h5>
                 <p class="card-text">{{i.activity_type_description}}</p>
             </div>
         </div>
@@ -51,9 +51,107 @@
         {% endfor %}
     </div>
 </div>
- <div class="mt-5">
-         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d112754.44897380406!2d84.2103742441168!3d27.976252471299926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39950780deaf2177%3A0x33b3696137fa9dfb!2sByas!5e0!3m2!1sen!2snp!4v1640668321703!5m2!1sen!2snp"
-                 width="1600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
- </div>
+    <!--Section: Contact v.2-->
+    <section class="mb-4 container">
+
+        <!--Section heading-->
+        <h2 class="h1-responsive font-weight-bold text-center my-4">Contact us</h2>
+        <!--Section description-->
+        <p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to contact us
+            directly. Our team will come back to you within
+            a matter of hours to help you.</p>
+
+        <div class="row">
+
+            <!--Grid column-->
+            <div class="col-md-9 mb-md-0 mb-5">
+                <form id="contact-form" name="contact-form" action="mail.php" method="POST">
+
+                    <!--Grid row-->
+                    <div class="row">
+
+                        <!--Grid column-->
+                        <div class="col-md-6">
+                            <div class="md-form mb-0">
+                                <input type="text" id="name" name="name" class="form-control">
+                                <label for="name" class="">Your name</label>
+                            </div>
+                        </div>
+                        <!--Grid column-->
+
+                        <!--Grid column-->
+                        <div class="col-md-6">
+                            <div class="md-form mb-0">
+                                <input type="text" id="email" name="email" class="form-control">
+                                <label for="email" class="">Your email</label>
+                            </div>
+                        </div>
+                        <!--Grid column-->
+
+                    </div>
+                    <!--Grid row-->
+
+                    <!--Grid row-->
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="md-form mb-0">
+                                <input type="text" id="subject" name="subject" class="form-control">
+                                <label for="subject" class="">Subject</label>
+                            </div>
+                        </div>
+                    </div>
+                    <!--Grid row-->
+
+                    <!--Grid row-->
+                    <div class="row">
+
+                        <!--Grid column-->
+                        <div class="col-md-12">
+
+                            <div class="md-form">
+                                <textarea type="text" id="message" name="message" rows="2"
+                                          class="form-control md-textarea"></textarea>
+                                <label for="message">Your message</label>
+                            </div>
+
+                        </div>
+                    </div>
+                    <!--Grid row-->
+
+                </form>
+
+                <div class="text-center text-md-left">
+                    <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</a>
+                </div>
+                <div class="status"></div>
+            </div>
+            <!--Grid column-->
+
+            <!--Grid column-->
+            <div class="col-md-3 text-center">
+                <ul class="list-unstyled mb-0">
+                    <li><i class="fas fa-map-marker-alt fa-2x"></i>
+                        <p>San Francisco, CA 94126, USA</p>
+                    </li>
+
+                    <li><i class="fas fa-phone mt-4 fa-2x"></i>
+                        <p>+ 01 234 567 89</p>
+                    </li>
+
+                    <li><i class="fas fa-envelope mt-4 fa-2x"></i>
+                        <p>contact@mdbootstrap.com</p>
+                    </li>
+                </ul>
+            </div>
+            <!--Grid column-->
+
+        </div>
+
+    </section>
+    <!--Section: Contact v.2-->
+    <div class="mt-5">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d112754.44897380406!2d84.2103742441168!3d27.976252471299926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39950780deaf2177%3A0x33b3696137fa9dfb!2sByas!5e0!3m2!1sen!2snp!4v1640668321703!5m2!1sen!2snp"
+                width="1600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </div>
 </div>
 {% endblock main_content %}
