--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 
-<meta charset="UTF-8">
+<meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="referrer" content="no-referrer-when-downgrade">
     {% block title%}
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 </head>
-<body>
+<body style=" background-color:linen">
 <div class="container_fluid">
     {% include 'header.html'%}
     {% block main_content %}
